src/objects/LASOResult__c.object
<CustomObject>
    <fields>
        <fullName>AnswerText__c</fullName>
        <label>Answer Text</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LinkToVPO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VPO</label>
        <referenceTo>VPO__c</referenceTo>
        <relationshipLabel>LASO Results</relationshipLabel>
        <relationshipName>LASO_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>LASO Result</label>
    <nameField>
        <displayFormat>{YYYYMMDD}-{0}</displayFormat>
        <label>LASO Result Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LASO Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>